--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ go:
 
 script:
   - go test -race -coverprofile=types.cov -covermode=atomic ./types
+  - go test -race -coverprofile=config.cov -covermode=atomic ./config
 
 after_script:
   - bash <(curl -s https://codecov.io/bash) -f '*.cov'
